# save-my-tokens

./: .env.example  .gitignore  .mcp.json  .smt_layers.json  .smtignore  ACTUAL_COVERAGE.md  API_QUICK_REFERENCE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPLETE_EXPLANATION.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  COVERAGE_FINAL_REPORT.md  COVERAGE_PROGRESS.md  COVERAGE_STRATEGY.md  CUsersLENOVO.claudeprojectsC--Users-LENOVO-Desktop-Projects-SYTmemoryMEMORY.md  DEVELOPMENT_TASKS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GIT_INTEGRATION_STATUS.md  GIT_INTEGRATION_TEST_PLAN.md  GIT_WORKFLOW_EXPLANATION.md  GRADE_REPORT.md  HONEST_COVERAGE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INCREMENTAL_FLOW_DIAGRAM.txt  INSTALL.md  INSTALL_PATHS.md  NEO4J_MCP_MANAGEMENT_PLAN.md  OPTIMIZATION_FINDINGS.md  PHASE_2_DELIVERY_SUMMARY.txt  PHASE_2_IMPLEMENTATION_STATUS.md  PHASE_2_RECOMMENDATIONS.md  PHASE_2_REVIEW_SUMMARY.txt  (+30 more)
.claude/: AGENT_INSTRUCTIONS.md  HARNESS.md  MCP_SETUP_INSTRUCTIONS.md  SETUP.md  TEST_TELEMETRY.md  TOOLS.md  settings.json  settings.local.json
.claude/.embeddings/: embeddings_cache.json
.claude/hooks/: smt_agent_hook.py
.claude/skills/mcp-guide/: SKILL.md
.claude/skills/smt-analysis/: SKILL.md  a2a-onboard.md  fabler-prompt.md  pathfinder-prompt.md  scout-prompt.md
.github/workflows/: ci.yml  lint.yml  sync-graph.yml
.smt/: config.json
.well-known/: agent.json
contrib/: README.md  github_integration.py
docs/: API_QUICK_REFERENCE.md  API_SPEC.md  ARCHITECTURE.md  CLEAN_TEST_REPORT.md  CONTRACT_EXTRACTION_GUIDE.md  FEATURE4_SCHEDULING_GUIDE.md  GITHUB_QUICK_START.txt  GITHUB_SETUP.md  GIT_WORKFLOW.md  HYBRID_WORKFLOW_GUIDE.md  HYBRID_WORKFLOW_VALIDATION.txt  INCREMENTAL_UPDATES_GUIDE.md  MCP_CHEATSHEET.md  MCP_EXAMPLES.md  MCP_QUICK_START.md  MCP_SERVER_GUIDE.md  MULTI_LANGUAGE_GUIDE.md  PHASE_2_SPECIFICATION.md  QUICKSTART.md  SMT_QUERY_OPTIMIZATION.md  TEAMWORK.md  TESTING.md  TEST_APPROACH_COMPARISON.md  TROUBLESHOOTING.md  VUE_TEST_HYBRID_REPORT.md  VUE_TEST_TRADITIONAL_REPORT.md  vue_search_border_research.md
scripts/: setup_neo4j.py
src/: __version__.py  cli_utils.py  config.py  projects.py  smt_cli.py  smtignore.py
src/agent/: __init__.py  base_agent.py  baseline_agent.py  evaluator.py  execution_engine.py  scheduler.py
src/agents/: __init__.py  models.py  query_engine.py
src/api/: contract_endpoints.py  incremental_endpoints.py  query_service.py  scheduling_endpoints.py  server.py
src/cli/: _helpers.py  analysis.py  build.py  code_intel.py  config.py  docker.py  graph_analysis.py  navigation.py  onboard.py  query.py  search.py  setup.py  status.py  sync.py  watch.py
src/contracts/: __init__.py  breaking_change_detector.py  contract_models.py  extractor.py
src/embeddings/: __init__.py  embedding_service.py
src/evaluation/: __init__.py  evaluation_runner.py  metrics_collector.py
src/graph/: __init__.py  call_analyzer.py  compressor.py  conflict_analyzer.py  cycle_detector.py  graph_builder.py  neo4j_client.py  node_types.py  validator.py
src/incremental/: __init__.py  diff_parser.py  git_ops.py  node_manager.py  symbol_delta.py  updater.py
src/mcp_server/: __init__.py  _app.py  entrypoint.py  services.py
src/mcp_server/tools/: contract_tools.py  database_tools.py  graph_tools.py  incremental_tools.py  scheduling_tools.py
src/parsers/: base_parser.py  csharp_parser.py  go_parser.py  import_resolver.py  java_parser.py  python_parser.py  rust_parser.py  symbol.py  symbol_index.py  typescript_parser.py  unified_parser.py
src/performance/: __init__.py  optimizer.py
src/testing/: __init__.py  test_executor.py
tests/: analyze_session.py  conftest.py  pattern_scan.py  test_prelaunch.py
tests/fixtures/: psf__requests-1963__baseline__2026-05-02T23-35-16.jsonl  psf__requests-1963__baseline__2026-05-02T23-46-20.jsonl  psf__requests-1963__smt__2026-05-02T23-32-24.jsonl  psf__requests-1963__smt__2026-05-02T23-42-31.jsonl  psf__requests-1963__smt__2026-05-03T13-47-25.jsonl  psf__requests-1963__smt__2026-05-03T21-19-56.jsonl  psf__requests-2148__baseline__2026-05-02T23-39-56.jsonl  psf__requests-2148__smt__2026-05-02T23-37-13.jsonl  psf__requests-2148__smt__2026-05-03T13-50-48.jsonl  psf__requests-2148__smt__2026-05-03T21-24-03.jsonl  psf__requests-2317__smt__2026-05-03T13-52-46.jsonl  psf__requests-2317__smt__2026-05-03T21-26-34.jsonl
tests/integration/: test_contract_extraction.py  test_graph_integration.py  test_incremental_updates.py  test_multi_language_parsers.py  test_scheduling_integration.py
tests/mcp/: test_all_mcp_tools.py  test_entrypoint.py  test_mcp_server_startup.py  test_mcp_tools.py  test_mcp_tools_async.py  test_mcp_tools_integration.py  test_server_startup.py
tests/unit/: test_agent.py  test_agent_evaluator_comprehensive.py  test_alternative_parsers.py  test_api_endpoints.py  test_api_server.py  test_baseline_agent_comprehensive.py  test_call_analyzer_comprehensive.py  test_config.py  test_conflict_analyzer.py  test_conflict_analyzer_comprehensive.py  test_contract_extractor_comprehensive.py  test_cycle_detector.py  test_database_tools.py  test_embedding_service.py  test_evaluation.py  test_evaluation_runner_comprehensive.py  test_evaluator_and_agents.py  test_execution_engine.py  test_graph_builder.py  test_graph_builder_comprehensive.py  test_import_resolver.py  test_incremental_updater.py  test_mcp_app_lifespan.py  test_mcp_entrypoint.py  test_mcp_tools_error_paths.py  test_neo4j_client.py  test_parsers.py  test_parsers_csharp.py  test_parsers_python.py  test_parsers_typescript.py  test_performance.py  test_performance_optimizer.py  test_query_engine.py  test_query_service_errors.py  test_retrieval_modes.py  test_scheduler.py  test_symbol_index.py
